Another Spacing Solve In Billing Page

--- a/src/scss/pages/_billing-information.scss
+++ b/src/scss/pages/_billing-information.scss
@@ -42,7 +42,7 @@
         }
 
         .payment-method {
-            margin-bottom: 16px;
+            margin-bottom: 26px;
 
             .method {
                 margin-right: 12px;
